--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@
     height: 100vh;
     color: white;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background: url(./jeremy-thomas-E0AHdsENmDg-unsplash.jpg) center no-repeat;
@@ -247,6 +248,20 @@ button:hover, #submit:hover{
 }
 ::placeholder{
     color: white;
+}
+#maintain{
+    text-align: center;
+    margin-top: 10px;
+}
+#maintain>a{
+    padding: 5px 7px;
+    text-decoration: none;
+    color: white;
+}
+#maintain>a:hover{
+    background-color: rgba(0, 0, 0, 0.4);
+    color: rgb(242, 242, 242);
+    border-radius: 20px;
 }
 @media screen and (max-width: 800px) and (min-width: 320px){
     .bodyw{
