--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@
 .pagew{
     width: 100%;
     height: 100vh;
+    min-height: 600px;
+    padding: 20px;
     color: white;
     display: flex;
     flex-direction: column;
@@ -237,6 +239,7 @@ button:hover, #submit:hover{
 }
 #winner{
     font-size: 50px;
+    text-align: center;
 }
 #players>input{
     width: 150px;
