--- a/index.css
+++ b/index.css
@@ -50,7 +50,6 @@
     text-align: center;
     font-size: 100px;
     font-weight: bolder;
-    margin: 20px;
 }
 #any{
     text-align: center;
@@ -101,6 +100,10 @@ button:hover, #submit:hover{
     text-align: center;
     margin-top: 20px;
     width: 100%;
+}
+.name{
+    position: relative;
+    bottom: 0px;
 }
 .none{
     display: none;
@@ -156,16 +159,20 @@ button:hover, #submit:hover{
     display: flex;
 }
 #namew{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 .divs{
     width: 30px;
+    min-width: 20px;
     height: 30px;
     color: white;
     border: none;
     border-bottom: 2px solid white;
     text-align: center;
-    margin: 0 5px;
+    margin: 0 5px 10px 0;
     text-transform: uppercase;
 }
 #turnw{
@@ -174,12 +181,17 @@ button:hover, #submit:hover{
     align-items: center;
     justify-content: center;
 }
+#form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 #check, #pass, #continue{
     font-size: 14px;
     border-radius: 10px;
     color: white;
     padding: 5px;
-    margin-top: 5px;
+    margin: 5px 5px 0 0;
     border: 1px solid white;
     background-color: transparent;
 }
@@ -187,7 +199,7 @@ button:hover, #submit:hover{
     border: none;
     outline: none;
     color: white;
-    width: 20px;
+    width: 30px;
     text-align: center;
     font-size: 20px;
     border-bottom: 2px solid white;
@@ -209,6 +221,10 @@ button:hover, #submit:hover{
     display: inline-block;
     width: 50px;
     text-align: center;
+}
+#flex{
+    display: flex;
+    justify-content: space-between;
 }
 .pname, #hello{
     width: 200px;
