--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: url(./jeremy-thomas-E0AHdsENmDg-unsplash.jpg) center no-repeat;
+    background: url(../img/jeremy-thomas-E0AHdsENmDg-unsplash.jpg) center no-repeat;
     background-size: cover;
     position: absolute;
 }
@@ -186,7 +186,7 @@ button:hover, #submit:hover{
     align-items: center;
     justify-content: center;
 }
-#check, #pass, #continue{
+#check, #pass, #continue, #again{
     font-size: 14px;
     border-radius: 10px;
     color: white;
@@ -194,6 +194,9 @@ button:hover, #submit:hover{
     margin: 5px 5px 0 0;
     border: 1px solid white;
     background-color: transparent;
+}
+#again{
+    opacity: 0;
 }
 #guess{
     border: none;
