--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 .pagew{
     width: 100%;
     height: 100vh;
-    min-height: 600px;
     padding: 20px;
     color: white;
     display: flex;
@@ -18,6 +18,7 @@
     background-size: cover;
     position: absolute;
 }
+
 .bodyw{
     width: 800px;
     height: 550px;
@@ -29,48 +30,59 @@
     border-radius: 20px;
     box-shadow:1px 1px 20px rgb(255, 255, 255);
     background-color: rgba(0, 0, 0, 0.4);
+    padding: 20px;
 }
+
 #open{
     width: 100%;
 }
+
 #open>div{
     height: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .welcome{
     text-align: center;
-    font-size: 100px;
+    font-size: 5em;
     font-weight: bolder;
     position: absolute;
 }
+
 #welcome{
     position: relative;
     text-align: center;
-    font-size: 100px;
+    font-size: 5em;
     font-weight: bolder;
 }
+
 #any{
     text-align: center;
     font-size: 25px;
     margin-top: 50px;
 }
+
 button:hover, #submit:hover{
     cursor: pointer;
 }
+
 #playerw{
     width: 50%;
     height: auto;
     padding: 20px;
 }
+
 #playerw p{
     font-size: 25px;
     text-align: center;
 }
+
 #playerw center{
     width: 400px;
 }
+
 #playerw center input{
     width: 150px;
     height: 80px;
@@ -90,10 +102,12 @@ button:hover, #submit:hover{
     box-shadow: 0 1px 1px #ffffff;
     text-shadow: 0 1px 0px #79485f7a;
 }
+
 #playerw center input:checked{
     background-image: linear-gradient(180deg, #ffffff, #000000);
     color: #fff;
 }
+
 #playerw center input:before{
     content: attr(label);
     display: inline-block;
@@ -101,21 +115,26 @@ button:hover, #submit:hover{
     margin-top: 20px;
     width: 100%;
 }
+
 .name{
     position: relative;
     bottom: 0px;
 }
+
 .none{
     display: none;
 }
+
 #playerwr{
     width: 100%;
 }
+
 #playerwr p{
     font-size: 30px;
     text-align: center;
     margin-bottom: 50px;
 }
+
 #playerwr form div{
     width: 100%;
     display: flex;
@@ -123,6 +142,7 @@ button:hover, #submit:hover{
     align-items: center;
     justify-content: center;
 }
+
 #submit{
     width: 150px;
     padding: 10px;
@@ -132,6 +152,7 @@ button:hover, #submit:hover{
     border: 2px solid white;
     background-color: transparent;
 }
+
 #players{
     width: 100%;
     height: 300px;
@@ -140,6 +161,7 @@ button:hover, #submit:hover{
     align-items: center;
     justify-content: center;
 }
+
 #players input{
     width: 200px;
     border: none;
@@ -148,6 +170,7 @@ button:hover, #submit:hover{
     font-size: 20px;
     margin: 20px;
 }
+
 .special{
     width: 100%;
     height: 80%;
@@ -155,15 +178,18 @@ button:hover, #submit:hover{
     font-size: 24px;
     position: absolute;
 }
+
 .special>div{
     display: flex;
 }
+
 #namew{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
+
 .divs{
     width: 30px;
     min-width: 20px;
@@ -175,17 +201,20 @@ button:hover, #submit:hover{
     margin: 0 5px 10px 0;
     text-transform: uppercase;
 }
+
 #turnw{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 #form{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .btn{
     font-size: 14px;
     border-radius: 10px;
@@ -195,9 +224,11 @@ button:hover, #submit:hover{
     border: 1px solid white;
     background-color: transparent;
 }
+
 #over>center>button{
     opacity: 0;
 }
+
 #guess{
     border: none;
     outline: none;
@@ -208,32 +239,39 @@ button:hover, #submit:hover{
     border-bottom: 2px solid white;
     background-color: transparent;
 }
+
 #turn{
     margin-top: 30px;
 }
+
 #scorew{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 #scorew>div{
     margin: 5px;
 }
+
 #scorew>div>div{
     display: inline-block;
     width: 50px;
     text-align: center;
 }
+
 #flex{
     display: flex;
     justify-content: space-between;
 }
+
 .pname, #hello{
     width: 200px;
     display: inline-block;
     margin: 5px 20px 5px 0px;
 }
+
 #wrong, #empty, #exist, #your{
     color: red;
     text-shadow: 1px 1px 1px rgb(255, 51, 51);
@@ -241,6 +279,7 @@ button:hover, #submit:hover{
     margin-top: 5px;
     font-size: 17px;
 }
+
 #right{
     color: green;
     text-shadow: 1px 1px 1px rgb(128, 255, 0);
@@ -248,6 +287,7 @@ button:hover, #submit:hover{
     margin-top: 5px;
     font-size: 20px;   
 }
+
 #gover{
     width: 100%;
     text-align: center;
@@ -255,10 +295,12 @@ button:hover, #submit:hover{
     font-weight: bolder;
     opacity: 0;
 }
+
 #winner{
     font-size: 50px;
     text-align: center;
 }
+
 #players>input{
     width: 150px;
     outline: none;
@@ -268,51 +310,69 @@ button:hover, #submit:hover{
     border-bottom: 1px solid white;
     background-color: transparent;
 }
+
 ::placeholder{
     color: white;
 }
+
 #maintain{
     text-align: center;
     margin-top: 10px;
 }
+
 #maintain>a{
     padding: 5px 7px;
     text-decoration: none;
     color: white;
 }
+
 #maintain>a:hover{
     background-color: rgba(0, 0, 0, 0.4);
     color: rgb(242, 242, 242);
     border-radius: 20px;
 }
+
 @media screen and (max-width: 800px) and (min-width: 320px){
+    .pagew{
+        min-height: 600px;
+    }
+
     .bodyw{
         width: 98%;
     }
+
     #playerw{
         width: 100%;
     }
+
     .welcome, #welcome{
-        font-size: 55px;
+        font-size: 3em;
     }
+
     #any{
         font-size: 20px;
     }
+
     #scorew{
         font-size: 20px;
     }
+
     .pname, #hello{
         width: 150px;
     }
+
     #gover{
         font-size: 50px;
     }
+
     #playerw center{
         width: auto;
     }
+
     #winner{
         font-size: 40px;
     }
+
     #playerw center input{
         margin: 10px 20px;
     }
